--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  .container {
+    @apply sm:px-4 mx-auto max-w-none;
+  }
+}
