--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -593,24 +593,49 @@ video {
   inset: 0px;
 }
 
-.left-1\/2 {
-  left: 50%;
-}
-
 .bottom-0 {
   bottom: 0px;
+}
+
+.left-20 {
+  left: 5rem;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mb-14 {
+  margin-bottom: 3.5rem;
 }
 
 .mb-4 {
   margin-bottom: 1rem;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
-.mb-14 {
-  margin-bottom: 3.5rem;
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.-mb-11 {
+  margin-bottom: -2.75rem;
+}
+
+.block {
+  display: block;
 }
 
 .flex {
@@ -621,62 +646,105 @@ video {
   display: grid;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
-}
-
-.min-h-screen {
-  min-height: 100vh;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-2\/5 {
-  width: 40%;
 }
 
 .w-4\/5 {
   width: 80%;
 }
 
-.w-5\/6 {
-  width: 83.333333%;
+.w-full {
+  width: 100%;
 }
 
-.w-\[5\/6\] {
-  width: 5/6;
-}
-
-.w-\[90\] {
-  width: 90;
+.w-\[4\/5\] {
+  width: 4/5;
 }
 
 .w-\[90\%\] {
   width: 90%;
 }
 
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
+.w-3\/4 {
+  width: 75%;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.basis-32 {
+  flex-basis: 8rem;
+}
+
+.basis-\[129\] {
+  flex-basis: 129;
+}
+
+.basis-\[129px\] {
+  flex-basis: 129px;
+}
+
+.basis-40 {
+  flex-basis: 10rem;
+}
+
+.translate-x-10 {
+  --tw-translate-x: 2.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.translate-y-2\/4 {
+  --tw-translate-y: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.grid-cols-\[2\] {
-  grid-template-columns: 2;
+.translate-y-\[34\%\] {
+  --tw-translate-y: 34%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.grid-cols-\[2fr\] {
-  grid-template-columns: 2fr;
+.translate-y-\[32\%\] {
+  --tw-translate-y: 32%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .grid-cols-\[2fr_1fr\] {
   grid-template-columns: 2fr 1fr;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
@@ -695,12 +763,54 @@ video {
   gap: 1.25rem;
 }
 
-.bg-\[url\(\'\.\.\/images\/hero-banner\.svg\'\)\] {
-  background-image: url('../images/hero-banner.svg');
+.gap-6 {
+  gap: 1.5rem;
 }
 
-.bg-\[url\(\'\.\.\/images\/hero-banner\.png\'\)\] {
-  background-image: url('../images/hero-banner.png');
+.gap-y-3 {
+  row-gap: 0.75rem;
+}
+
+.gap-y-10 {
+  row-gap: 2.5rem;
+}
+
+.gap-y-20 {
+  row-gap: 5rem;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
+.rounded-l {
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
+.bg-navy-color {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 59 119 / var(--tw-bg-opacity));
+}
+
+.bg-\[url\(\'\.\.\/images\/hero-banner-cropped\.png\'\)\] {
+  background-image: url('../images/hero-banner-cropped.png');
 }
 
 .bg-cover {
@@ -711,19 +821,43 @@ video {
   background-position: center;
 }
 
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.py-44 {
-  padding-top: 11rem;
-  padding-bottom: 11rem;
+.fill-white {
+  fill: #fff;
 }
 
 .py-9 {
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
+}
+
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+}
+
+.pb-44 {
+  padding-bottom: 11rem;
+}
+
+.pl-24 {
+  padding-left: 6rem;
+}
+
+.pt-44 {
+  padding-top: 11rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .font-heading-font {
@@ -749,6 +883,21 @@ video {
   line-height: 1.75rem;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -765,4 +914,47 @@ video {
 .text-yellow-color {
   --tw-text-opacity: 1;
   color: rgb(252 236 82 / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px) {
+  .sm\:w-11\/12 {
+    width: 91.666667%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:w-auto {
+    width: auto;
+  }
+
+  .lg\:capitalize {
+    text-transform: capitalize;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:w-auto {
+    width: auto;
+  }
+
+  .xl\:gap-10 {
+    gap: 2.5rem;
+  }
+
+  .xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
