--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -605,16 +605,12 @@ video {
   right: 0px;
 }
 
-.z-10 {
-  z-index: 10;
-}
-
-.z-20 {
-  z-index: 20;
-}
-
 .-z-10 {
   z-index: -10;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .mx-auto {
@@ -622,12 +618,8 @@ video {
   margin-right: auto;
 }
 
-.-mb-11 {
-  margin-bottom: -2.75rem;
-}
-
-.mb-14 {
-  margin-bottom: 3.5rem;
+.-mb-\[29px\] {
+  margin-bottom: -29px;
 }
 
 .mb-3 {
@@ -642,52 +634,8 @@ video {
   margin-bottom: 1.5rem;
 }
 
-.mb-7 {
-  margin-bottom: 1.75rem;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
 .mb-9 {
   margin-bottom: 2.25rem;
-}
-
-.-mb-10 {
-  margin-bottom: -2.5rem;
-}
-
-.-mb-8 {
-  margin-bottom: -2rem;
-}
-
-.-mb-4 {
-  margin-bottom: -1rem;
-}
-
-.-mb-5 {
-  margin-bottom: -1.25rem;
-}
-
-.-mb-6 {
-  margin-bottom: -1.5rem;
-}
-
-.-mb-7 {
-  margin-bottom: -1.75rem;
-}
-
-.-mb-\[26\] {
-  margin-bottom: -26;
-}
-
-.-mb-\[26px\] {
-  margin-bottom: -26px;
-}
-
-.-mb-\[29px\] {
-  margin-bottom: -29px;
 }
 
 .block {
@@ -706,21 +654,17 @@ video {
   display: grid;
 }
 
-.hidden {
-  display: none;
-}
-
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
 }
 
-.h-full {
-  height: 100%;
-}
-
 .h-screen {
   height: 100vh;
+}
+
+.w-36 {
+  width: 9rem;
 }
 
 .w-40 {
@@ -735,35 +679,17 @@ video {
   width: 90%;
 }
 
-.w-full {
-  width: 100%;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-36 {
-  width: 9rem;
-}
-
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .basis-40 {
   flex-basis: 10rem;
-}
-
-.translate-x-10 {
-  --tw-translate-x: 2.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-\[32\%\] {
-  --tw-translate-y: 32%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-translate-y-full {
@@ -776,6 +702,11 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-y-\[32\%\] {
+  --tw-translate-y: 32%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -784,12 +715,12 @@ video {
   grid-template-columns: 2fr 1fr;
 }
 
-.flex-col {
-  flex-direction: column;
+.grid-cols-reponsive-6 {
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
-.flex-wrap {
-  flex-wrap: wrap;
+.flex-col {
+  flex-direction: column;
 }
 
 .items-center {
@@ -804,24 +735,12 @@ video {
   justify-content: space-between;
 }
 
-.justify-around {
-  justify-content: space-around;
-}
-
-.gap-5 {
-  gap: 1.25rem;
-}
-
-.gap-6 {
-  gap: 1.5rem;
-}
-
 .gap-20 {
   gap: 5rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .gap-y-20 {
@@ -868,8 +787,8 @@ video {
   padding-bottom: 2.25rem;
 }
 
-.pb-44 {
-  padding-bottom: 11rem;
+.pb-28 {
+  padding-bottom: 7rem;
 }
 
 .pl-24 {
@@ -880,32 +799,12 @@ video {
   padding-top: 4rem;
 }
 
-.pt-44 {
-  padding-top: 11rem;
-}
-
 .pt-32 {
   padding-top: 8rem;
 }
 
-.pb-8 {
-  padding-bottom: 2rem;
-}
-
-.pb-32 {
-  padding-bottom: 8rem;
-}
-
-.pb-3 {
-  padding-bottom: 0.75rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-
-.pb-28 {
-  padding-bottom: 7rem;
+.pt-44 {
+  padding-top: 11rem;
 }
 
 .text-center {
@@ -920,29 +819,9 @@ video {
   font-family: Manrope, sans-serif;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
-}
-
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .text-5xl {
@@ -950,13 +829,13 @@ video {
   line-height: 1;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-lg {
   font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
@@ -986,10 +865,6 @@ video {
   transition-duration: 700ms;
 }
 
-.ease-in-out {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
@@ -1009,10 +884,6 @@ video {
     z-index: 0;
   }
 
-  .lg\:flex {
-    display: flex;
-  }
-
   .lg\:hidden {
     display: none;
   }
@@ -1021,12 +892,12 @@ video {
     height: auto;
   }
 
-  .lg\:w-full {
-    width: 100%;
-  }
-
   .lg\:w-auto {
     width: auto;
+  }
+
+  .lg\:w-full {
+    width: 100%;
   }
 
   .lg\:translate-y-0 {
@@ -1061,12 +932,12 @@ video {
 }
 
 @media (min-width: 1280px) {
-  .xl\:mb-14 {
-    margin-bottom: 3.5rem;
-  }
-
   .xl\:-mb-11 {
     margin-bottom: -2.75rem;
+  }
+
+  .xl\:mb-14 {
+    margin-bottom: 3.5rem;
   }
 
   .xl\:w-auto {
@@ -1082,17 +953,13 @@ video {
     gap: 2.5rem;
   }
 
-  .xl\:gap-5 {
-    gap: 1.25rem;
-  }
-
   .xl\:pb-44 {
     padding-bottom: 11rem;
   }
 
-  .xl\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+  .xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .xl\:text-7xl {
@@ -1100,8 +967,8 @@ video {
     line-height: 1;
   }
 
-  .xl\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
+  .xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
