--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -594,6 +594,10 @@ h2 {
   }
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .visible {
   visibility: visible;
 }
@@ -654,6 +658,10 @@ h2 {
   z-index: 10;
 }
 
+.col-start-2 {
+  grid-column-start: 2;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -670,6 +678,10 @@ h2 {
 
 .mb-1 {
   margin-bottom: 0.25rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .mb-12 {
@@ -716,8 +728,16 @@ h2 {
   margin-bottom: 2.25rem;
 }
 
+.ml-auto {
+  margin-left: auto;
+}
+
 .mt-11 {
   margin-top: 2.75rem;
+}
+
+.mb-56 {
+  margin-bottom: 14rem;
 }
 
 .block {
@@ -750,6 +770,10 @@ h2 {
 
 .hidden {
   display: none;
+}
+
+.h-0 {
+  height: 0px;
 }
 
 .h-fit {
@@ -818,8 +842,16 @@ h2 {
   width: 100%;
 }
 
+.w-2\/5 {
+  width: 40%;
+}
+
 .basis-40 {
   flex-basis: 10rem;
+}
+
+.origin-top {
+  transform-origin: top;
 }
 
 .-translate-x-1\/2 {
@@ -847,13 +879,28 @@ h2 {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-x-5 {
+  --tw-translate-x: 1.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .translate-y-3\/4 {
   --tw-translate-y: 75%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-y-\[45\%\] {
+  --tw-translate-y: 45%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .translate-y-full {
   --tw-translate-y: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-rotate-45 {
+  --tw-rotate: -45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -881,24 +928,24 @@ h2 {
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
-.grid-cols-\[\] {
-  grid-template-columns: ;
+.grid-cols-\[1fr_3fr\] {
+  grid-template-columns: 1fr 3fr;
 }
 
-.grid-cols-\[3fr_1fr\] {
-  grid-template-columns: 3fr 1fr;
+.grid-cols-\[1fr_4fr\] {
+  grid-template-columns: 1fr 4fr;
 }
 
-.grid-rows-\[auto_1fr\] {
-  grid-template-rows: auto 1fr;
-}
-
-.grid-rows-\[3fr_1fr\] {
-  grid-template-rows: 3fr 1fr;
+.grid-cols-\[1fr_2fr\] {
+  grid-template-columns: 1fr 2fr;
 }
 
 .grid-rows-\[4fr_1fr\] {
   grid-template-rows: 4fr 1fr;
+}
+
+.grid-rows-\[auto_1fr\] {
+  grid-template-rows: auto 1fr;
 }
 
 .flex-col {
@@ -923,6 +970,10 @@ h2 {
 
 .justify-items-center {
   justify-items: center;
+}
+
+.gap-10 {
+  gap: 2.5rem;
 }
 
 .gap-16 {
@@ -989,6 +1040,15 @@ h2 {
   row-gap: 1.75rem;
 }
 
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.gap-y-4 {
+  row-gap: 1rem;
+}
+
 .self-end {
   align-self: flex-end;
 }
@@ -1017,9 +1077,27 @@ h2 {
   border-width: 1px;
 }
 
+.border-\[30px\] {
+  border-width: 30px;
+}
+
+.border-transparent {
+  border-color: transparent;
+}
+
+.border-l-white {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .bg-dark-grey-color {
   --tw-bg-opacity: 1;
   background-color: rgb(45 47 51 / var(--tw-bg-opacity));
+}
+
+.bg-light-blue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(108 135 179 / var(--tw-bg-opacity));
 }
 
 .bg-light-purple {
@@ -1046,8 +1124,16 @@ h2 {
   background-image: url('../images/hero-banner-cropped.png');
 }
 
-.bg-\[url\(\'\.\.\/images\/we-are-better-bg\.png\'\)\] {
-  background-image: url('../images/we-are-better-bg.png');
+.bg-\[url\(\'\.\.\/images\/we-are-better-bg\.svg\'\)\] {
+  background-image: url('../images/we-are-better-bg.svg');
+}
+
+.bg-\[url\(\'\.\.\/images\/download-our-app-bg\.png\'\)\] {
+  background-image: url('../images/download-our-app-bg.png');
+}
+
+.bg-\[url\(\'\.\.\/images\/download-our-app-bg\.svg\'\)\] {
+  background-image: url('../images/download-our-app-bg.svg');
 }
 
 .bg-cover {
@@ -1056,6 +1142,15 @@ h2 {
 
 .bg-center {
   background-position: center;
+}
+
+.bg-top {
+  background-position: top;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-14 {
@@ -1073,6 +1168,11 @@ h2 {
   padding-right: 2rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .py-7 {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
@@ -1083,12 +1183,21 @@ h2 {
   padding-bottom: 2.25rem;
 }
 
+.px-9 {
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
+}
+
 .pb-12 {
   padding-bottom: 3rem;
 }
 
 .pb-14 {
   padding-bottom: 3.5rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
 }
 
 .pb-28 {
@@ -1146,10 +1255,6 @@ h2 {
 
 .pt-6 {
   padding-top: 1.5rem;
-}
-
-.pt-1 {
-  padding-top: 0.25rem;
 }
 
 .text-center {
@@ -1263,6 +1368,11 @@ h2 {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.drop-shadow-\[-3px_12px_0_\#6c87b3\] {
+  --tw-drop-shadow: drop-shadow(-3px 12px 0 #6c87b3);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -1273,6 +1383,10 @@ h2 {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
 }
 
 .duration-700 {
@@ -1303,8 +1417,9 @@ h2 {
        column-gap: 2.5rem;
 }
 
-.owl-carousel .owl-item img {
-  width: auto;
+.owl-carousel.reviews .owl-item img,
+.owl-carousel.reviews-2 .owl-item img {
+  width: 4rem;
 }
 
 @media (min-width: 640px) {
@@ -1321,12 +1436,25 @@ h2 {
     width: auto;
   }
 
+  .sm\:w-4\/5 {
+    width: 80%;
+  }
+
   .sm\:grid-cols-\[1fr_2fr\] {
     grid-template-columns: 1fr 2fr;
   }
 
   .sm\:grid-cols-\[1fr_4fr\] {
     grid-template-columns: 1fr 4fr;
+  }
+
+  .sm\:flex-row {
+    flex-direction: row;
+  }
+
+  .sm\:px-14 {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
   }
 
   .sm\:text-start {
@@ -1446,6 +1574,10 @@ h2 {
 
   .lg\:grid-cols-\[2fr_1fr_2fr\] {
     grid-template-columns: 2fr 1fr 2fr;
+  }
+
+  .lg\:grid-cols-\[1fr_2fr\] {
+    grid-template-columns: 1fr 2fr;
   }
 
   .lg\:flex-row {
@@ -1594,5 +1726,10 @@ h2 {
   .xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .xl\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
